syntax = "proto3";

package sample;

import "sample.proto";

service Service {
    rpc Method1(Simple) returns (Response);
    rpc Method2(stream Simple) returns (Response) {
        option (common.option) = {
            status: 200
            message: "OK"
        };
        option (common.another_option) = {
            option: "option"
        };
    }
    rpc Method3(Simple) returns (stream Response);
    rpc Method4(stream Simple) returns (stream Response);
}